--- a/BeetTweek-Firmware/torqueknob/.cproject
+++ b/BeetTweek-Firmware/torqueknob/.cproject
@@ -65,9 +65,9 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F4xx/Include"/>
 									<listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy"/>
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/DSP/Include"/>
-									<listOptionValue builtIn="false" value="C:/Users/casht/Desktop/TESTFOLDER/API"/>
-									<listOptionValue builtIn="false" value="&quot;C:/Users/casht/Desktop/TESTFOLDER/BeetTweek-Firmware/STM32Utilities/Inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:/Users/casht/Desktop/TESTFOLDER/BeetTweek-Firmware/SharedSource&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\API&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\STM32Utilities\Inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\BeetTweek-Firmware\SharedSource&quot;"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.445571401" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -81,10 +81,10 @@
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F4xx/Include"/>
 									<listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy"/>
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/DSP/Include"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/torqueknob/STM32Utilities/Inc}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;E:\Repos\BeetTweek-Firmware-Public\API&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/torqueknob/SharedSource}&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/torqueknob/MathExtras_DSP}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\STM32Utilities\Inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\BeetTweek-Firmware\SharedSource&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\MathExtras_DSP&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\API&quot;"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.definedsymbols.1378392132" name="Define symbols (-D)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.definedsymbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="STM32F405xx"/>
@@ -178,9 +178,6 @@
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="MathExtras_DSP"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="STM32Utilities"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="SharedSource"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -329,14 +326,14 @@
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.2018369058;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.2018369058.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.1588981788;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.177083727">
-			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.2018369058;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.2018369058.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.1722131374;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.2042262051">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1738589226;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1738589226.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.1873206273;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.445571401">
 			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.2018369058;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.2018369058.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.1722131374;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.2042262051">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.2018369058;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.release.2018369058.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.1588981788;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.177083727">
+			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 		<scannerConfigBuildInfo instanceId="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1738589226;com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.1738589226.;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.524804425;com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.578180462">
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
