--- a/BeetTweek-Firmware/DSPBoardH7/.cproject
+++ b/BeetTweek-Firmware/DSPBoardH7/.cproject
@@ -64,9 +64,6 @@
 									<listOptionValue builtIn="false" value="DEBUG"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths.859655993" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\STM32Utilities\Inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\BeetTweek-Firmware\SharedSource&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\API&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Core/Inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Drivers/STM32H7xx_HAL_Driver/Inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Drivers/STM32H7xx_HAL_Driver/Inc/Legacy&quot;"/>
@@ -80,6 +77,9 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/USB_DEVICE/Target&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Middlewares/ST/STM32_USB_Device_Library/Core/Inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc}/BeetTweek-Firmware/API&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc}/BeetTweek-Firmware/STM32Utilities/Inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc}/BeetTweek-Firmware/BeetTweek-Firmware/SharedSource&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.fnostrictaliasing.1521332604" name="Disable &quot;strict aliasing&quot; optimization (-fno-strict-aliasing)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.fnostrictaliasing" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1930849222" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
@@ -95,10 +95,6 @@
 									<listOptionValue builtIn="false" value="DEBUG"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.includepaths.776108346" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.includepaths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\STM32Utilities\Inc&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\MathExtras_DSP&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\BeetTweek-Firmware\SharedSource&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\Users\casht\repos\subMatrixWorkSpace\BeetTweek-Firmware\API&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Core/Inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Middlewares/ST/STM32_USB_Device_Library/Core/Inc&quot;"/>
@@ -112,6 +108,10 @@
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Drivers/CMSIS/Device/ST/STM32H7xx/Include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Drivers/STM32H7xx_HAL_Driver/Inc/Legacy&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${ProjDirPath}/Drivers/STM32H7xx_HAL_Driver/Inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc}/BeetTweek-Firmware/API&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc}/BeetTweek-Firmware/BeetTweek-Firmware/SharedSource&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc}/BeetTweek-Firmware/STM32Utilities/Inc&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc}/BeetTweek-Firmware/MathExtras_DSP&quot;"/>
 								</option>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.fnostrictaliasing.1499846596" name="Disable &quot;strict aliasing&quot; optimization (-fno-strict-aliasing)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.fnostrictaliasing" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.languagestandard.779738735" name="Language standard" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.languagestandard" useByScannerDiscovery="true" value="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.option.languagestandard.value.gnupp17" valueType="enumerated"/>
@@ -325,6 +325,7 @@
 		<configuration configurationName="Release">
 			<resource resourceType="PROJECT" workspacePath="/DSPBoardH7"/>
 		</configuration>
+		<configuration configurationName="SpeedOptimized"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
