--- a/BeetTweek-Firmware/BootloaderH7/.project
+++ b/BeetTweek-Firmware/BootloaderH7/.project
@@ -32,19 +32,29 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>MathExtras_DSP</name>
+			<name>API</name>
 			<type>2</type>
-			<location>/home/almov/repos/subMatrixWorkSpace/BeetTweek-Firmware/MathExtras_DSP</location>
+			<locationURI>PARENT-2-PROJECT_LOC/API</locationURI>
 		</link>
 		<link>
-			<name>STM32Utilities</name>
+			<name>MathExtras_DSP</name>
 			<type>2</type>
-			<location>/home/almov/repos/subMatrixWorkSpace/BeetTweek-Firmware/STM32Utilities</location>
+			<locationURI>PARENT-2-PROJECT_LOC/MathExtras_DSP</locationURI>
+		</link>
+		<link>
+			<name>STM32Utilities_INC</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/STM32Utilities/Inc</locationURI>
+		</link>
+		<link>
+			<name>STM32Utilities_SRC</name>
+			<type>2</type>
+			<locationURI>PARENT-2-PROJECT_LOC/STM32Utilities/Src</locationURI>
 		</link>
 		<link>
 			<name>SharedSource</name>
 			<type>2</type>
-			<location>/home/almov/repos/subMatrixWorkSpace/BeetTweek-Firmware/SharedSource</location>
+			<locationURI>PARENT-1-PROJECT_LOC/SharedSource</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
